# employment_schedule

./: .gitignore  README.md  justfile  pyproject.toml
src/check_slot_service/: check_slot_service.py  main.py  schedule.py  time_slot.py
src/check_slot_service/dto/: data_models.py  parse_time.py
tests/check_slot_service/: conftest.py  test_check_slot_service.py
